Forms should POST.

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <p>Are you interested? Tell us about your project, ask for more information, or simply say hi.</p>
           </div>
 
-          <form class="contact-form" action="https://formspree.io/erwinlarios65+bitcoin2html@gmail.com">
+          <form class="contact-form" action="https://formspree.io/erwinlarios65+bitcoin2html@gmail.com" method="post">
             <div class="contact-form-userInfo">
               <div class="contact-form-userInfo-group">
                 <label class="contact-form-label" for="form-input-name">Name</label>
