--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
   <meta name="msapplication-TileColor" content="#9360ff">
   <meta name="theme-color" content="#9360ff">
 
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:creator" content="@erwinlarios">
+  <meta name="twitter:image" content="img/social/social-card-small.png">
+
+  <meta property="og:image" content="img/social/social-card.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="628">
+  <meta property="og:title" content="Bitcoin 2 HTML">
+  <meta property="og:description" content="Buy your professional website with Bitcoin and start living in the future">
+  <meta property="og:url" content="https://erwinandres.github.io/bitcoin2html">
+
   <link rel="stylesheet" href="css/style.css">
 </head>
 
