--- a/index.html
+++ b/index.html
@@ -202,6 +202,16 @@
       </footer>
     </main>
   </div>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114924098-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-114924098-1');
+  </script>
   <script src="js/main.js"></script>
 </body>
 </html>
