Relative URL to home.

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <meta name="description" content="Buy your professional website with Bitcoin and start living in the future">
 
   <link rel="shortcut icon" href="favicon.ico">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
-  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#6534ff">
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="mask-icon" href="safari-pinned-tab.svg" color="#6534ff">
   <meta name="apple-mobile-web-app-title" content="Bitcoin2HTML">
   <meta name="application-name" content="Bitcoin2HTML">
   <meta name="msapplication-TileColor" content="#9360ff">
@@ -37,7 +37,7 @@
 <body>
   <div class="wrapper">
     <header class="header">
-      <h1 class="header-title"><a class="header-title-link" href="/">Bitcoin 2 HTML</a></h1>
+      <h1 class="header-title"><a class="header-title-link" href="./">Bitcoin 2 HTML</a></h1>
 
       <nav class="header-nav">
         <a class="header-nav-ctaButton js-scrollTo" href="#contact">Get your website →</a>
