--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
       <footer class="footer">
         <div class="footer-inner">
-          <p>&copy; 2018. <code>&lt;/&gt;</code> with <span class="love">&hearts;</span> by me. <a href="#">Legal</a></p>
+          <p>&copy; 2018. <code>&lt;/&gt;</code> with <span class="love">&hearts;</span> by me. <a href="legal/">Legal</a></p>
         </div>
       </footer>
     </main>
