Link to home in legal document.

--- a/legal/index.html
+++ b/legal/index.html
@@ -13,7 +13,7 @@
 <body>
 	<div class="wrapper">
 		<nav>
-			<a href="/">&larr; Back to Bitcoin 2 HTML</a>
+			<a href="../">&larr; Back to Bitcoin 2 HTML</a>
 		</nav>
 		<main>
 			<h1>Bitcoin 2 HTML legal information</h1>
