--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="hero-text">
           <h2 class="hero-text-title">You need a website, I need some bitcoins&hellip; Let's make a deal!</h2>
 
-          <p>I´ll develop your website, blog, landing page, or HTML email for a reasonable bitcoin price.</p>
+          <p>I´ll develop your website, blog, landing page, or HTML email for a affordable bitcoin price.</p>
         </div>
 
         <div class="hero-vending">
