--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       <section class="secondCTA">
         <h2>Not convinced yet?</h2>
 
-        <p>Send me a message with all your questions and I wil clarify all your doubts.</p>
+        <p>Send me a message with all your questions and I will clarify all your doubts.</p>
 
         <a class="ctaButton js-scrollTo" href="#contact">Get a quote →</a>
       </section>
